sd/source/ui/unoidl/sddetect.cxx
@@ -351,6 +351,10 @@ OUString SAL_CALL SdFilterDetect::detect( Sequence< beans::PropertyValue >& lDes
                         pStm = aMedium.GetInStream();
                         if (!pStm)
                             pFilter = NULL;
+
+                        pStm->Seek( STREAM_SEEK_TO_BEGIN );
+                        if (pStm->remainingSize() == 0)
+                            pFilter = NULL;
                     }
 
                     if (pFilter && pStm)
